This file documents the revision history for Perl web application WomenInBotany.

{{$NEXT}}

0.26      2016-09-23 14:08:47+02:00 Europe/Berlin

    - Prefix short uri with http://


0.25      2016-09-23 13:51:09+02:00 Europe/Berlin

    - Allow short uri (e.g. www.perl.com) as link uri

0.24      2016-09-22 13:54:19+02:00 Europe/Berlin

    - Sanitize mixed content blocking by Firefox

0.23      2016-09-22 12:03:02+02:00 Europe/Berlin

    - Change login form to requiring https


0.22      2016-09-20 09:49:54+02:00 Europe/Berlin

    - New links can be added
    - REST API for spatial searches with output in JSON
    - switch to PostgeSQL 

0.21      2015-01-18 16:00:00+01:00 Europe/Berlin

    - Year of birth/death and birth-/date has been matched and
      year of birth/death is removed from the edit form 

0.20      2015-01-17 10:28:00+01:00 Europe/Berlin

    - New botanists or references can be added to the database

0.19      2014-11-09 19:27:04+01:00 Europe/Berlin

    - Access control is now based on roles

0.18      2014-10-01 14:45:32+02:00 Europe/Berlin

    - Dates in the field last_seen in the table of links are now correctly
      parsed 

0.17      2014-09-25 13:12:22+02:00 Europe/Berlin

    - Fields for year of birth and death are added to the form for botanists
    - A script for mass correction in the database is added

0.16      2014-09-10 09:42:12+02:00 Europe/Berlin

    - field_of_activity is renamed to professional_experience
    - peculiar_fields_of_activity is added

0.15      2014-09-09 12:25:09+02:00 Europe/Berlin

    - searching in list of botanist added  

0.14      2014-09-08 16:41:44+02:00 Europe/Berlin

    - table status added
    - field for internal notes in table botanists added

0.13      2014-09-07 16:07:26+02:00 Europe/Berlin

    - authentication support via LDAP  

0.01  2013-04-07 15:11:15+01:00 Europe/Berlin 

    - initial revision, generated by Catalyst