@@ -19,8 +19,8 @@ abstract = WomeninBotany is a Web Application of a bibliographic database about 
 [FileFinder::Filter / PodWeaverFiles] ; exclude modules created by dbicdump
 finder = :InstallModules    ; find files from :InstallModules
 finder = :ExecFiles         ; or :ExecFiles
-skip  =  /Schema/Result/    ; exclude result source modules
-skip  =  /Schema\.pm$       ; exclude module Schema.pm
+skip  =  Schema::Result     ; exclude result source modules
+skip  =  Schema$            ; exclude module Schema.pm
 
 ; file modifications
 [Encoding]
@@ -98,4 +98,4 @@ Catalyst::Authentication::Store::DBIx::Class = 0
 [Git::Push]         ; push repo to remote
 push_to = origin
 push_to = github
-
+push_to = gitlab
