@@ -1,0 +1,20 @@
+use utf8;
+package GND::Schema;
+
+# Created by DBIx::Class::Schema::Loader
+# DO NOT MODIFY THE FIRST PART OF THIS FILE
+
+use Moose;
+use MooseX::MarkAsMethods autoclean => 1;
+extends 'DBIx::Class::Schema';
+
+__PACKAGE__->load_namespaces;
+
+
+# Created by DBIx::Class::Schema::Loader v0.07046 @ 2016-11-04 14:40:59
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:RxgfWAqyEBnjmuRAU7Fy8g
+
+
+# You can replace this text with custom code or comments, and it will be preserved on regeneration
+__PACKAGE__->meta->make_immutable(inline_constructor => 0);
+1;
