@@ -2,6 +2,8 @@ This file documents the revision history for Perl web application WomenInBotany.
 
 {{$NEXT}}
 
+    - Match botanists with GND
+
 0.26      2016-09-23 14:08:47+02:00 Europe/Berlin
 
     - Prefix short uri with http://
